# polution-viewer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.CIUEDJ  Doxyfile  README.md  REQUIREMENTS.md  pollution_viewer.qmlproject.GXWQoj  pollution_viewer.qmlproject.qtds
src/: MainView.qml  SensorDataView.qml  SensorListView.qml  StationListView.qml  apimanager.cpp  apimanager.h  appcontroller.cpp  appcontroller.h  jsonrepository.cpp  jsonrepository.h  main.cpp  requestcontext.cpp  requestcontext.h
tests/: main.cpp  testjsonrepository.cpp  testjsonrepository.h  testrequestcontext.cpp  testrequestcontext.h
